src/style.css
@font-face {
  font-family: shipment;
  src: url('./assets/Shipment.ttf');
}

@font-face {
  font-family: jersey;
  src: url('./assets/Jersey10-Regular.ttf');
}

body {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  margin: 0;
}

header {
  background-color: #cdb4db;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50px;
}

.header-text {
  font-family: shipment;
  font-size: 3rem;
  color: black;
  margin: 0;
  padding: 0;
}

main {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
  background-color: whitesmoke;
}

.board-containers {
  display: flex;
  padding: 30px;
  gap: 2rem;
  justify-content: center;
}

.middle-container {
  max-width: auto;
  display: flex;
  gap: 30px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.middle-container p {
  font-size: 1.8rem;
  margin: 0;
  font-family: jersey, Arial, Helvetica, sans-serif;
}

.middle-container button:hover {
  cursor: pointer;
}

.draggable-ship {
  display: flex;
}

.column {
  flex-direction: column;
}

.draggable-ship div {
  border: solid 1px black;
  background-color: grey;
  border-radius: 5px;
  width: 43px;
  height: 43px;
}

.draggable-ships-container {
  min-height: 350px;
  width: 350px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.middle-container button {
  width: 120px;
  width: 8rem;
  height: 2rem;
  background-color: #ffc8dd;
  border-radius: 5px;
  font-size: 1.3rem;
  font-family: jersey, Arial, Helvetica, sans-serif;
}

.dynamic-info-text {
  width: 150px;
  text-align: center;
  font-size: 1.4rem;
  font-family: jersey, Arial, Helvetica, sans-serif;
}

.player-board,
.computer-board {
  width: 450px;
  height: 450px;
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
  background-color: #a2d2ff;
  border: solid 8px gray;
  border-radius: 5px;
}

.player-board > div,
.computer-board > div {
  border: solid 1px black;
  border-radius: 5px;
}

.computer-board > div:hover {
  transform: scale(1.2);
  border-color: red;
}

.board-and-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main-player-texts {
  font-size: 2.5rem;
  font-family: jersey, Arial, Helvetica, sans-serif;
  font-weight: bold;
  margin: 0;
}

.afloat {
  background-color: grey;
}

.hit {
  background-color: #bb4430;
}

.miss {
  background-color: white;
}

.sunk {
  background-color: black;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.3rem;
}

footer {
  background-color: #cdb4db;
  color: black;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  font-family: jersey, Arial, Helvetica, sans-serif;
}

